--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,7 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this app. NOTE: This is inside the 'public' directory</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
